[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stablehash"
version = "0.1.1"
description = "Stable hashing of Python data structures spanning invokations and platforms. "
authors = ["Niklas Rosenstein <niklas.rosenstein@helsing.ai>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "stablehash", from = "src" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
keywords = [
    "hash",
    "stable hash",
    "hashlib",
    "dataclasses",
    "python hashing",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/NiklasRosenstein/python-stablehash/issues"
Repository = "https://github.com/NiklasRosenstein/python-stablehash"
# Documentation = ""

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pycln = "^2.1.3"
pytest = "*"

[tool.slap]
typed = true

[tool.slap.test]
check  = "slap check"
black  = "black --check src/"
flake8 = "flake8 src/"
isort  = "isort --check-only src/"
mypy   = "dmypy run src/"
pycln  = "pycln src/ --check"
pytest = "pytest -vv src/"

[tool.slap.run]
fmt = "pycln src/ && black src/ && isort src/"

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.black]
line-length = 120
